temporary fix for x dir overflow

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
     sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    @apply w-screen overflow-x-clip
 }
 
 ::-moz-selection { /* Code for Firefox */
